--- a/portfolio.css
+++ b/portfolio.css
@@ -7,6 +7,10 @@ a {
   text-decoration: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .container {
   display: flex;
   justify-content: center;
@@ -15,6 +19,11 @@ a {
   height: 100%;
   max-width: 1750px;
   position: relative;
+  margin: 0 auto;
+}
+
+#pagewidth {
+  justify-content: space-between;
 }
 
 section {
@@ -46,6 +55,10 @@ header {
   font-weight: 400;
 }
 
+#home {
+  color: #5e3bee;
+}
+
 .buttoncontactme {
   color: #5e3bee;
   text-decoration: none;
@@ -60,6 +73,10 @@ header {
 }
 
 /* 1 section: hey */
+.blue {
+  background-color: #f5fcff;
+}
+
 .column {
   width: 50%;
   align-items: center;
@@ -115,8 +132,13 @@ header {
   flex-direction: column;
 }
 
+.poshirine {
+  width: 100%;
+}
+
 .grid {
   display: grid;
+  grid-auto-flow: row;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 20px;
@@ -175,9 +197,22 @@ header {
   height: 32px;
 }
 
+.swiper-wrapper {
+  display: flex;
+  flex-direction: row;
+}
 /*4 section: About me*/
 
+.align-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /* 5 section: input*/
+.inputsection {
+  align-items: center;
+}
 
 .inputblock {
   display: grid;
@@ -203,6 +238,10 @@ header {
   flex-direction: column;
 }
 
+#poshirine {
+  width: 100%;
+}
+
 .footerflex {
   display: flex;
   display: inline-flex;
@@ -214,4 +253,11 @@ header {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.footer-btn {
+  display: flex;
+  list-style: none;
+  column-gap: 43px;
+  justify-content: center;
 }
